--- a/resources/sass/components/_slider.scss
+++ b/resources/sass/components/_slider.scss
@@ -4,6 +4,9 @@
   @include  breakpoint($medium) {
     height: 450px;
   }
+    .swiper-scrollbar {
+        display: none;
+    }
 }
 .swiper-container {
   width: 100% !important;
